@@ -23,6 +23,7 @@ Key: # = backwards incompatible change, ! = new feature, - = bugfix.
 ! HEX colors are converted to lowercase to smaller compressed size
 ! New CSS3 properties
 ! Method for merging @import files
+! Properly sorting IE 6 and 7 hack properties (thanks weikinhuang)
 - Added localizations for css_optimiser.php
 - Fixed bug with cookie setting for custom templates
 - Minor security problem in css_optimiser.php fixed
